<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_message"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_gravity="center_horizontal"
        />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/module_database"
        android:text="@string/DatabaseSystem"
        android:onClick="selectModule"
        />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/module_hci"
        android:text="@string/HumanComputerInteraction"
        android:onClick="selectModule"
        />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/module_wp"
        android:text="@string/WebProgrammingwithJAVA"
        android:onClick="selectModule"
        />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/module_im"
        android:text="@string/InteractiveMultimedia"
        android:onClick="selectModule"
        />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/module_dc"
        android:text="@string/DataCommunication"
        android:onClick="selectModule"
        />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/module_mis"
        android:text="@string/ManagementInformationSystems"
        android:onClick="selectModule"
        />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/module_ec"
        android:text="@string/ECommerce"
        android:onClick="selectModule"
        />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/module_dm"
        android:text="@string/DiscreteMathematics"
        android:onClick="selectModule"
        />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/module_architecture"
        android:text="@string/ComputerArchitecture"
        android:onClick="selectModule"
        />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/module_java"
        android:text="@string/JAVA2"
        android:onClick="selectModule"
        />


    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:layout_gravity="center_horizontal"
        android:onClick="finalSelection"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/final_result"
        android:text="@string/hello_world"

        />




</LinearLayout>